--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,7 @@
 <body>
 <section id="app" class="section">
     <div class="container">
+        <div id="account"><button>login</button></div>
         <h1 class="title">
             {{ message }}
         </h1>
