--- a/static/index.html
+++ b/static/index.html
@@ -147,7 +147,7 @@
             locations: [
                 "кампус, Вул. Саксаганського 1, м.Палац спорту",
                 "Signal Event Hall, Жилянська 97б, м. Вокзальна",
-                "центр бачати, вул. Дарвина, 1, м. Театральна",
+                "центр бачати, вул. Дарвина, 1, м. Театральна, код #140, 7 поверх, №54",
                 "Buena Vista,  вул. Велика Житомирська 8/14, м. Золоті ворота",
                 "арт-кафе Золоті Ворота, вул. Миколи Лисенка, 1, ст.м. Золоті ворота",
                 "Nivki Hall Проспект Перемоги 84, . м. Нивки",
@@ -156,6 +156,7 @@
                 "котокафе, м. Вокзальна",
                 "лівобережна студія, вул. Дніпровська набережна 19, м. Осокорки",
                 "Raíces Dance Studio, вул. Кирилівська,4, м. Контрактова площа",
+                "студія CasaDeRitmo, м.Олімпійська, Вул. Жилянська, 5б, код 11К"
             ]
         },
         methods: {
